<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <include layout="@layout/action_bar_with_back" />

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text = "@string/friend_setting_auto_tip"
            android:textColor="@color/black"
            android:textSize="@dimen/common_size" />

    <RadioGroup
            android:id="@+id/rg_auto_invite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
                android:id="@+id/rb_enable_auto_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/friend_setting_auto_yes"
                android:textColor="@color/black"
                android:textSize="@dimen/common_size" />
        <RadioButton
                android:id="@+id/rb_disable_auto_invite"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:text="@string/friend_setting_auto_no"
                android:textColor="@color/black"
                android:textSize="@dimen/common_size" />
    </RadioGroup>

</LinearLayout>