<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffffff"
              android:weightSum="1">
    <include layout="@layout/action_bar_with_back"/>

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="20dip"
            android:gravity="center">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="科別"
                android:id="@+id/textDivision_1"
                android:layout_gravity="center"
                android:textColor="@color/tutor_skip"
                android:textSize="@dimen/common_size"
                android:layout_marginLeft="20dip"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:id="@+id/walkway_location_distance_type_spinner"
                android:prompt="@string/spinner_prompt_division"
                android:spinnerMode="dialog"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/spinner_border"
                android:layout_marginRight="20dip"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginBottom="10dip"/>
    </LinearLayout>
    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dip"
            android:layout_marginBottom="20dip"
            android:gravity="center">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="地區"
                android:id="@+id/textArea_1"
                android:layout_gravity="center"
                android:textColor="@color/tutor_skip"
                android:textSize="@dimen/common_size"
                android:layout_marginLeft="20dip"/>
        <Spinner
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:id="@+id/spinner_area"
                android:prompt="@string/spinner_prompt_area"
                android:spinnerMode="dialog"
                android:background="@drawable/spinner_border"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="20dip"
                android:layout_marginLeft="10dip"
                android:layout_marginBottom="30dip"
                android:longClickable="false"/>
    </LinearLayout>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/text_keyword"
            android:id="@+id/action_bar_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/tutor_skip"
            android:textSize="@dimen/common_size"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"/>


    <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/key_search_group"
            android:orientation="horizontal">

        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/radio_button_size"
                android:text="@string/config_doctor_name"
                android:id="@+id/config_doctor_name"
                android:checked="true"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/radio_button_size"
                android:text="@string/config_hospital_name"
                android:id="@+id/config_hospital_name"
                />
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/radio_button_size"
                android:text="@string/config_address"
                android:id="@+id/config_address"
                android:layout_marginLeft="-235dip"
                android:layout_marginTop="40dip"/>
        <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/radio_button_size"
                android:text="@string/config_another"
                android:id="@+id/config_another"
                android:layout_marginTop="40dip"
                android:layout_marginLeft="36dip"/>

    </RadioGroup>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="70sp"
            android:paddingLeft="15dip"
            android:id="@+id/keywordET"
            android:textSize="@dimen/common_size"
            android:textColor="#ff000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:layout_marginBottom="10dip"
            android:background="@drawable/text_view_border"
            android:hint="@string/text_keyword_hint"
            android:singleLine="true"
            android:textColorHint="@color/hint_color"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal">
        <Button
                android:layout_width="match_parent"
                android:layout_height="70sp"
                android:text="@string/next_step"
                android:id="@+id/button_next"
                android:textSize="@dimen/common_size"
                android:textColor="@color/tutor_skip"
                android:background="@drawable/btn_shape_selector"
                android:layout_marginRight="60dp"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="30dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"/>

    </LinearLayout>
</LinearLayout>