<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffffff"
              android:weightSum="1" android:baselineAligned="false" android:orientation="vertical">
    <include layout="@layout/action_bar_with_back"/>


    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/scrollView">
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" android:gravity="center">
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:layout_marginBottom="10dip"
                    android:gravity="left">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/area"
                        android:id="@+id/textArea_3"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/tutor_skip"
                        android:textSize="@dimen/common_size"
                        android:layout_marginLeft="20dip"/>
                <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/spinner_area"
                        android:prompt="@string/spinner_prompt_area"
                        android:spinnerMode="dialog"
                        android:background="@drawable/spinner_border"
                        android:layout_gravity="left"
                        android:layout_marginTop="4dip"
                        android:layout_marginBottom="5dip"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:gravity="center_vertical"
                        android:longClickable="false"/>
            </LinearLayout>
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:orientation="horizontal"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dip"
                    android:gravity="center_horizontal">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/division"
                        android:id="@+id/textDivision_4"
                        android:layout_gravity="center_vertical"
                        android:textColor="@color/tutor_skip"
                        android:textSize="@dimen/common_size"
                        android:layout_marginLeft="20dip"/>
                <Spinner
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/division_spinner"
                        android:prompt="@string/spinner_prompt_pharmacy"
                        android:spinnerMode="dialog"
                        android:layout_gravity="left"
                        android:background="@drawable/spinner_border"
                        android:layout_marginTop="4dip"
                        android:layout_marginLeft="20dip"
                        android:layout_marginRight="20dip"
                        android:layout_marginBottom="5dip"/>


            </LinearLayout>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_doctor_name"
                    android:id="@+id/textView"
                    android:textColor="@color/tutor_skip"
                    android:textSize="@dimen/common_size"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="10dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="70sp"
                    android:paddingLeft="20dip"
                    android:id="@+id/doctor_name_et"
                    android:textSize="@dimen/common_size"
                    android:textColor="#ff000000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/text_view_border"
                    android:hint="@string/text_keyword_hint_need"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/enter_hospital_name"
                    android:id="@+id/hospital_name_txt"
                    android:textColor="@color/tutor_skip"
                    android:textSize="@dimen/common_size"
                    android:layout_gravity="left"
                    android:layout_marginLeft="20dp"
                    android:layout_marginBottom="10dp"/>
            <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="70sp"
                    android:paddingLeft="15dip"
                    android:id="@+id/hospital_name_et"
                    android:textSize="@dimen/common_size"
                    android:textColor="#ff000000"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dip"
                    android:layout_marginLeft="20dip"
                    android:layout_marginRight="20dip"
                    android:background="@drawable/text_view_border"
                    android:hint="@string/text_keyword_hint_need"
                    android:singleLine="true"
                    android:textColorHint="@color/hint_color"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="70sp"
                    android:text="@string/next_step"
                    android:id="@+id/button_next"
                    android:textSize="@dimen/common_size"
                    android:textColor="@color/tutor_skip"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginRight="60dp"
                    android:layout_marginLeft="60dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/btn_shape_selector"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>