<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="#ffffffff"
              android:weightSum="1">
    <include layout="@layout/action_bar_with_back"/>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Doctor Name"
            android:id="@+id/action_bar_title"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/tutor_skip"
            android:textSize="@dimen/common_size"
            android:layout_marginLeft="15dip"
            android:layout_marginBottom="10dip"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Hospital"
            android:id="@+id/textView2"
            android:textColor="@color/tutor_skip"
            android:textSize="@dimen/item_text_size"
            android:layout_marginLeft="20dip"
            android:layout_marginBottom="10dip"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Division"
            android:id="@+id/textView3"
            android:textColor="@color/tutor_skip"
            android:textSize="@dimen/item_text_size"
            android:layout_marginLeft="20dip"/>
    <View
            android:layout_height="1dp"
            android:layout_width="fill_parent"
            android:background="@color/doctor_comment"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/message_title"
            android:id="@+id/textViewMessage1"
            android:textColor="@color/doctor_comment"
            android:textSize="@dimen/common_size"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>

    <EditText
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:paddingLeft="15dip"
            android:id="@+id/keywordET"
            android:textSize="@dimen/common_size"
            android:textColor="#ff000000"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dip"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/text_view_border"
            android:hint="@string/text_keyword_hint"
            android:inputType="textMultiLine"
            android:textColorHint="@color/hint_color"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/page_num"
            android:textSize="@dimen/item_text_size"
            android:textColor="#ff000000"
            android:layout_gravity="right"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:id="@+id/page"/>

    <Button
            android:layout_width="350sp"
            android:layout_height="70sp"
            android:text="@string/no_message_close"
            android:id="@+id/button_next"
            android:textSize="@dimen/common_size"
            android:textColor="@color/tutor_skip"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/btn_skip_learn_selector"/>
</LinearLayout>